# supervisor

./: .gitignore  Cargo.toml  Makefile  README.md  main.rs  taskmaster.rs  test.rs
config/: config-env.yml  config-fail.yml  config-scripts.yml  config-sigtest.yml  config-stdout-err.yml  config-time.yml  config-umask.yml  config-working-dir.yml  config.yml  default-config.yml
src/: control.rs  lib.rs  logger.rs  main.rs  parse.rs  runtime.rs  shell.rs
src/parse/: mod.rs  parse.rs
tests/: spawner_tests.rs
