[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supervisor"
path = "src/main.rs"

[dependencies]
# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# for fork/exec/setsid/umask
nix = { version = "0.29", features = ["process", "fs"] }

# Async runtime and process management
tokio = { version = "1.28", features = ["full", "macros", "time"] }
async-trait = "0.1"

# Signal handling (Tokio integration)
signal-hook = "0.3"
signal-hook-tokio = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-test = "0.1"

# tail
chrono = "0.4"

# Interactive shell
rustyline = "15.0.0"

# (Optional) error reporting
anyhow = "1.0"

futures = "0.3"
